added Space Mono font and began work on 80s synth style prototype

--- a/index.html
+++ b/index.html
@@ -9,19 +9,30 @@
     <script src="./javascript/index.js"></script>
   </head>
   <body>
-      <div id="div-name">
+      <div class="div-container yellow-text-with-shadow">
           <h1 id="header-name">Joshua<br />Baldwin</h1>
       </div>
-      <div id="div-nav">
+      <div class="div-container">
         <ul id="ul-nav">
-            <li class="li-nav">About Me</li>
-            <li class="li-nav">Projects</li>
-            <li class="li-nav">Skills</li>
-            <li class="li-nav">Contact Me</li>
+            <li class="li-nav magenta-text-with-shadow"><a href="#about-me">About Me</a></li>
+            <li class="li-nav magenta-text-with-shadow"><a href="#projects">Projects</a></li>
+            <li class="li-nav magenta-text-with-shadow"><a href="#skills">Skills</a></li>
+            <li class="li-nav magenta-text-with-shadow"><a href="#contact-me">Contact Me</a></li>
         </ul>
       </div>
       <div id="div-content-area">
-          
+        <div class="div-container">
+          <h2 id="about-me" class="h2-subsection yellow-text-with-shadow">About Me</h2>
+        </div>
+        <div class="div-container">
+          <h2 id="projects" class="h2-subsection yellow-text-with-shadow">Projects</h2>
+        </div>
+        <div class="div-container">
+          <h2 id="skills" class="h2-subsection yellow-text-with-shadow">Skills</h2>
+        </div>
+        <div class="div-container"></div>
+          <h2 id="contact-me" class="h2-subsection yellow-text-with-shadow">Contact Me</h2>
+        </div>
       </div>
   </body>
 </html>
