refactored project into sliding panel design

--- a/index.html
+++ b/index.html
@@ -5,34 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joshua Baldwin</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./javascript/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/fullpage.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <script type="text/javascript" src="./javascript/fullpage.js"></script>
+    <script type="text/javascript" src="./javascript/fullpage.extensions.min.js"></script>
+    <script defer type="text/javascript" src="./javascript/initializefullpage.js"></script>
   </head>
   <body>
-      <div class="div-container yellow-text-with-shadow">
-          <h1 id="header-name">Joshua<br />Baldwin</h1>
-      </div>
-      <div class="div-container">
-        <ul id="ul-nav">
-            <li class="li-nav magenta-text-with-shadow"><a href="#about-me">About Me</a></li>
-            <li class="li-nav magenta-text-with-shadow"><a href="#projects">Projects</a></li>
-            <li class="li-nav magenta-text-with-shadow"><a href="#skills">Skills</a></li>
-            <li class="li-nav magenta-text-with-shadow"><a href="#contact-me">Contact Me</a></li>
-        </ul>
-      </div>
-      <div id="div-content-area">
-        <div class="div-container">
-          <h2 id="about-me" class="h2-subsection yellow-text-with-shadow">About Me</h2>
-        </div>
-        <div class="div-container">
-          <h2 id="projects" class="h2-subsection yellow-text-with-shadow">Projects</h2>
-        </div>
-        <div class="div-container">
-          <h2 id="skills" class="h2-subsection yellow-text-with-shadow">Skills</h2>
-        </div>
-        <div class="div-container"></div>
-          <h2 id="contact-me" class="h2-subsection yellow-text-with-shadow">Contact Me</h2>
-        </div>
-      </div>
+    <div id="fullpage">
+      <div class="section"><div class="div-content-center">About Me</div></div>
+      <div class="section"><div class="div-content-center">Skills</div></div>
+      <div class="section"><div class="div-content-center">Projects</div></div>
+      <div class="section"><div class="div-content-center">Contact Me</div></div>
+    </div>
   </body>
 </html>
