--- a/index.html
+++ b/index.html
@@ -13,10 +13,21 @@
   </head>
   <body>
     <div id="fullpage">
-      <div class="section"><div class="div-content-center">About Me</div></div>
-      <div class="section"><div class="div-content-center">Skills</div></div>
-      <div class="section"><div class="div-content-center">Projects</div></div>
-      <div class="section"><div class="div-content-center">Contact Me</div></div>
+      <div id="typed-name-container" class="section">
+        <div id="typed-name" class="div-content-center">Joshua Baldwin</div>
+      </div>
+      <div class="section">
+        <div class="div-content-center">About Me</div>
+      </div>
+      <div class="section">
+        <div class="div-content-center">Skills</div>
+      </div>
+      <div class="section">
+        <div class="div-content-center">Projects</div>
+      </div>
+      <div class="section">
+        <div class="div-content-center">Contact Me</div>
+      </div>
     </div>
   </body>
 </html>
