Changes over to new index.html, old renamed to old-index.html

--- a/index.html
+++ b/index.html
@@ -6,38 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joshua Baldwin</title>
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="./css/fullpage.css">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    
     <!-- JavaScript -->
-    <script type="text/javascript" src="./javascript/fullpage.js"></script>
-    <script type="text/javascript" src="./javascript/fullpage.extensions.min.js"></script>
-    <script defer src="https://buttons.github.io/buttons.js"></script>
-    <script defer type="text/javascript" src="./javascript/initializefullpage.js"></script>
+    
   </head>
+
   <body>
-    <div id="fullpage">
-      <div id="typed-name-container" class="section">
-        <div id="typed-name" class="div-content-center">Joshua Baldwin</div>
-        <div id="name-page-title-zone">
-          <a class="github-button" 
-            href="https://github.com/jbaldw" 
-            data-color-scheme="no-preference: dark_high_contrast; light: dark_high_contrast; dark: dark_high_contrast;"
-            data-size="large" 
-            aria-label="Follow @jbaldw on GitHub">Follow @jbaldw</a>
-        </div>
-      </div>
-      <div class="section">
-        <div class="div-content-center">About Me</div>
-      </div>
-      <div class="section">
-        <div class="div-content-center">Skills</div>
-      </div>
-      <div class="section">
-        <div class="div-content-center">Projects</div>
-      </div>
-      <div class="section">
-        <div class="div-content-center">Contact Me</div>
-      </div>
-    </div>
+    Test Me
   </body>
 </html>
