Creates skeleton for new layout, removes fullpage.js, adds links to new pages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   </head>
 
   <body>
-    Test Me
+    <main>
+      <header>
+        <h1>Joshua Baldwin</h1>
+        <h2>Computer Science, MS</h2>
+        <ul>
+          <li><a href="./html/about.html">About</a></li>
+          <li><a href="./html/projects.html">Projects</a></li>
+          <li><a href="./html/resume.html">Resume</a></li>
+          <li><a href="./html/contact.html">Contact</a></li>
+        </ul>
+      </header>
+    </main>
   </body>
 </html>
