--- a/html/contact.html
+++ b/html/contact.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact - Joshua Baldwin</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Stylesheets-->
+
+    <!-- JavaScript -->
+    <!-- unpkg -->
+    <script src="https://unpkg.com/@barba/core"></script>
+    <!-- gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <!-- Initialize Barba -->
+    <script src="./javascript/init-barba.js"></script>
   </head>
   
-  <body>
-
+  <body data-barba="wrapper">
+    <header>
+      <h1>Joshua Baldwin</h1>
+      <h2>Computer Science, MS</h2>
+      <ul>
+        <li><a href="./html/about.html">About</a></li>
+        <li><a href="./html/projects.html">Projects</a></li>
+        <li><a href="./html/resume.html">Resume</a></li>
+        <li><a href="./html/contact.html">Contact</a></li>
+      </ul>
+    </header>
+    <main data-barba="container" data-barba-namespace="contact">
+      <p>Contact</p>
+    </main>
   </body>
 </html>
