Tests new layout for About Me page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
             aria-label="Follow @jbaldw on GitHub">Follow @jbaldw</a>
         </div>
       </div>
-      <div class="section">
-        <div class="div-content-center">About Me</div>
+      <div class="section fp-section fp-table fp-is-overflow active fp-completely" id="section-3" data-anchor="page3" style="">
+        <div class="fp-overflow" tabindex="-1">
+          <div class="intro">
+            <h1>About Me</h1>
+          </div>
+        </div>
       </div>
       <div class="section">
         <div class="div-content-center">Skills</div>
