--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
             aria-label="Follow @jbaldw on GitHub">Follow @jbaldw</a>
         </div>
       </div>
-      <div class="section fp-section fp-table fp-is-overflow active fp-completely" id="section-3" data-anchor="page3" style="">
-        <div class="fp-overflow" tabindex="-1">
+      <div class="section">
           <div class="intro">
             <h1>About Me</h1>
+            <p>
+              I am a computer science graduate with a passion for coming up with unique, computer science-oriented solutions to daily problems inside and outside the technology field. My primary concentration is in web and mobile technologies with an interest in cloud computing and full-stack development.
+            </p>
           </div>
-          <p>
-            I am a computer science graduate with a passion for coming up with unique, computer science-oriented solutions to daily problems inside and outside the technology field. My primary concentration is in web and mobile technologies with an interest in cloud computing and full-stack development.
-          </p>
         </div>
       </div>
       <div class="section">
