Changes background of Skills to gradient

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
           </div>
       </div>
-      <div class="section">
+      <div id="skills" class="section">
         <div class="div-content-center">Skills</div>
       </div>
       <div class="section">
