Changes all background colors to gradient

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <div id="skills" class="section">
         <div class="div-content-center">Skills</div>
       </div>
-      <div class="section">
+      <div id="projects" class="section">
         <div class="div-content-center">Projects</div>
       </div>
-      <div class="section">
+      <div id="contactme" class="section">
         <div class="div-content-center">Contact Me</div>
       </div>
     </div>
