Adds image to About Me section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               I am a computer science graduate with a passion for coming up with unique, computer science-oriented solutions to daily problems inside and outside the technology field. My primary concentration is in web and mobile technologies with an interest in cloud computing and full-stack development.
             </p>
           </div>
+          <div>
+            <img src="./images/Screenshot_20230615_233213_Photos.jpg">
+          </div>
       </div>
       <div id="skills" class="section">
         <div class="div-content-center">Skills</div>
