--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <p>
               I am a computer science graduate with a passion for coming up with unique, computer science-oriented solutions to daily problems inside and outside the technology field. My primary concentration is in web and mobile technologies with an interest in cloud computing and full-stack development.
             </p>
-          </div class="intro">
-          <div>
+          <div class="intro">
             <img src="./images/Screenshot_20230615_233213_Photos.jpg">
           </div>
       </div>
