--- a/theo.html
+++ b/theo.html
@@ -20,9 +20,9 @@
             <a class="click-me" href="https://www.amazon.com/g/MSS5RVWJ97FR9H?ref_=pe_906650_284786740_HI0101IMG">Go to Amazon</a>
         </div>
     </div>
-
-    <audio class="audio" autoplay>
-        <source src="./audio/Drake - Rich Flex Emo.mp3" type="audio/mp3">
+    
+    <audio class="audio" autoplay muted>
+        <source src="./audio/Drake - Rich Flex Emo.mp3" type="audio/mpeg">
     </audio>
   </body>
 </html>
